0.5.2 (UNRELEASED)
------------------
- Also send DEVNAME in uevent when available. Thanks Chris Halse Rogers!

0.5.1 (2014-01-16)
------------------
- Update devices/cameras/canon-powershot-sx200.ioctl with ioctls from
  libgphoto2 2.5.3, to make the /umockdev-run/integration/gphoto-* tests work
  with that version.

0.5 (2014-01-08)
----------------
- Add generic support for variable length structs without pointers to
  substructs. Definitions of such ioctls must provide a get_data_size()
  function which returns the number of bytes based on the ioctl number and the
  data pointer.
- Declare libc ioctl type correctly using varargs. On some architectures (e.g.
  ppc64el) the calling convention for varargs is sufficiently different that
  the previous declaration caused stack corruption. Thanks Colin Watson!

0.4.7 (2013-11-14)
------------------
- Skip umockdev-record loop device test if /sys exists, but there is no loop
  device.
- Slightly relax timings in /umockdev-testbed/script_replay_simple test to
  avoid failure on slow machines.
- preload: Wrap chmod() and inotify_add_watch().
- Fix assertion on umockdev_testbed_uevent() if there are no listeners.
  (issue #29)

0.4.6 (2013-10-11)
------------------
- Fix wrong select() call timeout which caused a failure on arm64.
- Skip umockdev-record tests which need /sys if there is no real /sys.
  (Debian #724203)

0.4.5 (2013-09-17)
------------------
- Make various test cases more robust.

0.4.4 (2013-09-16)
------------------
- testsuite: Write "skip" messages to stdout instead of stderr.
- README.rst: Add information about building, testing, running, and
  contributing.
- Add code coverage reporting with gcov and lcov, using the gnome-common
  macros. autogen.sh will enable this automatically if lcov is installed.
- Support comments in scripts and ioctl records, lines starting with '#' get
  ignored.

0.4.3 (2013-08-23)
------------------